# whaw

./: Changelog.txt  Makefile.am  README.mkd  configure.ac  event.c  event.h  print_event.c  print_event.h  property.c  property.h  util.h  whaw.c  whaw.pod  whaw.spec.in  xatoms.atoms  xutil.c
_darcs/: hashed_inventory  index  tentative_pristine
_darcs/inventories/: 0000000290-055069b6c74ac22b23dc2b82306e72157a0010c30315581a8e1fe43757729933  0000000394-3b83e8c496969e12855d232333653d33a577f7573a5230cc01fddfb23853531d  0000000483-b25dde0c79f7fefb347f7c80aa098c7ab7a402798f0765b22e578f4ce504fdbb  0000000916-3dd73ef997e69d50fca5e7a1e727d2e03b437526e162d8aefee91da70ad80708  0000000916-fd964252ba8c4b3a9c0822c1e5859e0cf239727722a11f0d9bdd89315c63588a  0000000939-88ada4b84f9f6e6f0cabd22f8f3c5f8c8068032402b46baf43264ce7d3795116  0000001065-05ce34b772a31055b02a06edf4e07a147b890966d3eb866f1cce97e4dfde08f0  0000001563-7d7ad482dce71757c0411e2f4cfb4b1b93a97c1becd4845d975297616d9ce874  0000001736-f7074bc11920f42e97f889478520fc41a6bce1449d1573e14e5f695706303ca8  0000001781-bb1de1b7a525f7f03213e5a8e07f26aaa6ad3d5464a01dc7f06ff5940626ec0d  0000003876-287910febd7ba7f79d1df14905aae392df4d0ebd195477a938a16518b9a29a7e
_darcs/patches/: 0000000174-72bdd8b5a20ee7d9c5acb11c3ae5382f1958ade17f7f5ee3367d8b33d7818e6c  0000000180-d1eeedf37da2cca97bae9740339d6b15000f9fd7a6a02c3452e5f6b61bb52efa  0000000181-b58a8919a778c49a08eaab0d2b19a779953f58f83f0ad1b74ab2d9dd33ea551b  0000000197-eff2c45b3283b593642db57b3f0df745b1cd0be835cd36f0ac32c3df3bd04111  0000000227-b6c1e3737398057b2a1cd95ad597f55c29304a5b5d598f46c396bd0ba37fbcde  0000000255-125d69251907cc775d37d01a15bba4dc361bbcfc6e283630f87669b81d80c77b  0000000287-7f285aac824b47c0f1a46f695da1a157e08cba1079c4201bf59169ef7a6bc16e  0000000305-ca6bec3ba4166b188de41bf582ef1e7719be15f62580dc1294def165cdf112a3  0000000373-e8deda7e737cc5a289d17244da140094e93ab73a7de947b8f515086a7d1bb60a  0000000434-25dd679bbb625994311034b8b8c32789d2174ceba0448c1d9498377bacecbfa2  0000000496-f2dcff1d88e7ed8d08f40c2a6c13f17c8ef9040691828e5192a4f7a8f92c37da  0000000540-efacbdec9ad9208365fe8a572978a15a921d5a7192f45deb83d8e2abbf1ec074  0000000544-142b0052a7d96cd947204af11f58d2ccd90286b9fff70319257659fc6a3be752  0000000900-3dbf5c4ab41937b851c0cfc74008092452b4c9feca9fabb59f75c3fb4027fa8f  0000000920-97dbd8aad55156b164397f924fd13dc6b5954b99c2734f1dbd3c93fb441d8042  0000000965-bd46a3204f789fb9b7e8de18c94b0e271e4e820ebff21403190621cbca303b0b  0000001029-1228734eeaa3a5d6da6b8a23fda23ceebeb220c7a2e5e1df6232e8724479d47d  0000001073-75586121153deed9aad77c76f8ec7f58f12b01835f5e885d84bd83f9ffbbc5b0  0000001093-a77b6c06be83b5bad472fe67900bad23e3372ca4eccf8e6f8bd357a964b01f8b  0000001504-6419b066cc8c7135b67aec83df1acdfabce13f190fccea9ac298660f2d28cbc0  0000001665-062cc475a32acd20c2d358ca8392d939622b24bfdfa65e9380ac2f10dea34714  0000001942-8ffd2c60d3da18cfeb9ab2a5dd035130c4c5a3d454c3f60827ada507c43635b0  0000002192-8a2f835e600661c0e5df22dfe1de43bfef9b80f320d7d621f48272eca73f6b67  0000002248-0703213783e71b0ca31bfdee6b72ea20e57f36d74285eefa5b7debce513f8c82  0000002327-ddc652375bdb6db207eece09be97365f9201cdeaf16005e2c6d33ede41e4c6b4  0000002406-fb657998064141516a96e40ea769f96bb33b5ffb2145a42d9f2da57025037cb5  0000002536-37ec8086e127e4251198ec1ac715b067839963ac233510195b2d098b19643b95  0000002762-8c20ef8756d65cf314f6e9d90d930f220b9987d13821536d8278dbe25292160e  0000003468-b45171dc4963da03488c339e8ce7250158677be8bb3daedecb767d62efc0d3b5  0000003523-8f55c2d22e670fa787371f57e1142d5fe2f4b1a302dfa318cbc04fa57fc0f08c  0000003736-9a8219b7ac31a54ee8dddacaa8cea3ea3cf257a583a3f4574190c44388205f8a  0000003797-4c3b5fa060651692fae9360c5692a5c6ab58d96335c2185564587c79c3e69a97  0000007366-d8669d9b150322c341ada11cfd58ed7f26cccff59652e1eaf83f42e7c1771978  (+7 more)
_darcs/prefs/: email  (+2 more)
_darcs/pristine-old/: Makefile.am  configure.ac  event.h  genatoms.prl  print_event.c  whaw.c  whaw.pod  xutil.h
